force-app/main/default/objects/Ticket_2__c/Ticket_2__c.object-meta.xml
<CustomObject>
    <label>Ticket 2</label>
    <nameField>
        <displayFormat>TID-{000}</displayFormat>
        <label>Ticket ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets 2</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>