force-app/main/default/objects/Ticket_2__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INR (₹)</fullName>
            </value>
            <value>
                <fullName>USD ($)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>