force-app/main/default/objects/Ticket_2__c/fields/Emaild__c.field-meta.xml
<CustomField>
    <fullName>Emaild__c</fullName>
    <label>Emaild</label>
    <type>Email</type>
</CustomField>