force-app/main/default/objects/Ticket_2__c/fields/Fare__c.field-meta.xml
<CustomField>
    <fullName>Fare__c</fullName>
    <label>Fare</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>