force-app/main/default/objects/Ticket_2__c/fields/Flight_ID__c.field-meta.xml
<CustomField>
    <fullName>Flight_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flight ID</label>
    <referenceTo>Flight_2__c</referenceTo>
    <relationshipLabel>Tickets 2</relationshipLabel>
    <relationshipName>Tickets_2</relationshipName>
    <type>Lookup</type>
</CustomField>