force-app/main/default/objects/Ticket_2__c/fields/Food_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Food_Preferences__c</fullName>
    <label>Food Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Build Vegetables</fullName>
            </value>
            <value>
                <fullName>Burger</fullName>
            </value>
            <value>
                <fullName>Cold Coffee</fullName>
            </value>
            <value>
                <fullName>Green Tea</fullName>
            </value>
            <value>
                <fullName>Hot Coffee</fullName>
            </value>
            <value>
                <fullName>Pasta</fullName>
            </value>
            <value>
                <fullName>Pizza</fullName>
            </value>
            <value>
                <fullName>Poha</fullName>
            </value>
            <value>
                <fullName>Salad</fullName>
            </value>
            <value>
                <fullName>Sandwich</fullName>
            </value>
            <value>
                <fullName>Tea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>