force-app/main/default/objects/Ticket_2__c/fields/Passenger_ID__c.field-meta.xml
<CustomField>
    <fullName>Passenger_ID__c</fullName>
    <label>Passenger ID</label>
    <referenceTo>Passenger_2__c</referenceTo>
    <relationshipLabel>Tickets 2 (Passenger ID)</relationshipLabel>
    <relationshipName>Tickets_21</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>