force-app/main/default/objects/Ticket_2__c/recordTypes/Business_Class.recordType-meta.xml
<RecordType>
    <fullName>Business_Class</fullName>
    <active>true</active>
    <label>Business Class</label>
</RecordType>