force-app/main/default/objects/Ticket_2__c/recordTypes/Economy.recordType-meta.xml
<RecordType>
    <fullName>Economy</fullName>
    <active>true</active>
    <label>Economy</label>
</RecordType>