force-app/main/default/objects/Ticket_2__c/validationRules/fare_greater_than_5000_then_food.validationRule-meta.xml
<ValidationRule>
    <fullName>fare_greater_than_5000_then_food</fullName>
    <active>true</active>
    <description>if fare is greater than 5000 then foodpreference is necessary</description>
    <errorConditionFormula>Fare__c  &gt; 5000  &amp;&amp;  ISBLANK( Food_Preferences__c )</errorConditionFormula>
    <errorDisplayField>Food_Preferences__c</errorDisplayField>
    <errorMessage>Please Select Food</errorMessage>
</ValidationRule>