force-app/main/default/objects/Ticket_2__c/listViews/Fare_greater_than_5000.listView-meta.xml
<ListView>
    <fullName>Fare_greater_than_5000</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Fare__c</field>
        <operation>greaterThan</operation>
        <value>5000</value>
    </filters>
    <label>Fare greater than 5000</label>
</ListView>